fixed gap in spacing-3

--- a/packages/storybook/src/templates/details/index.css
+++ b/packages/storybook/src/templates/details/index.css
@@ -53,6 +53,13 @@
   }
 }
 
+.rhc-templates-spacing-3 {
+  display: flex;
+  flex-direction: column;
+  gap: var(--rhc-space-300);
+  margin-block-end: var(--rhc-space-400);
+}
+
 .rhc-linklist-collection {
   column-gap: var(--rhc-space-300);
   display: flex;
