--- a/packages/storybook/src/templates/globals.css
+++ b/packages/storybook/src/templates/globals.css
@@ -42,9 +42,6 @@ h1 {
 }
 
 .rhc-templates-spacing-2 {
-  display: flex;
-  flex-direction: column;
-  gap: var(--rhc-space-300);
   margin-block-end: var(--rhc-space-400);
 }
 
